<resources>
    <string name="app_name">Calculadora de gorjeta</string>
    <string name="hint_TextInput_Gorjeta">Digite um valor ex: 35.50</string>
    <string name="gorjeta_text">Gorjeta</string>
    <string name="total_text">Total</string>
    <string name="default_progress">0%</string>
    <string name="default_value_gorjeta">R$ 0</string>
    <string name="image_description">Coin</string>
</resources>